<resources>
    <string name="app_name">FlocNews</string>
    <string name="news_api_key">e25a0637a43e452e99650a086201c26c</string>
    <string name="category_predicate">Category: %1$s</string>
    <string name="language_predicate">Language: %1$s</string>
    <string name="temperature_postfix">%d °C</string>
    <string name="feels_like">Feels like: %d °C</string>
    <string name="wind_postfix">Wind direction: %d km/h</string>
    <string name="humidity_postfix">Humidity: %d %s</string>
    <string name="wind_direction">Wind direction: %s</string>
    <string name="login_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="menu_news">News</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exit">Exit</string>
    <string name="not_registered_yet">REGISTER</string>
    <string name="rep_pass_hint">Repeat password</string>
    <string name="register_button">Register</string>
    <string name="phone_hint">Phone</string>
    <string name="last_name_hint">Last name</string>
    <string name="name_hint">Name</string>
    <string name="confirm_button">Confirm</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="contry_hint">Country:</string>
    <string name="city_hint">City:</string>
    <string name="user_registered">User successfully registered</string>
    <string name="change_pass_hint">Old password</string>
    <string name="new_pass_hint">New password</string>
    <string name="repeat_new_pass_hint">Repeat new password</string>

    <string name="email_login_error">Wrong email or password</string>
    <string name="pass_error">Password must contain 8 symbols and at least one character</string>
    <string name="pass_not_match">Passwords not match</string>
    <string name="email_input_error">Wrong email format</string>
    <string name="empty_field">Field shouldn\'t be empty</string>
    <string name="date_pattern">dd-MMM-yyyy</string>
    <string name="current_temperature">Current temperature:</string>

    <string name="weather_url">http://api.weatherstack.com/current</string>
    <string name="weather_key">71430d29dd5f91d6541aa50b8277582d</string>
    <string name="sources_warning">You haven\'t choosen any sources, please choose one and return to news page</string>
    <string name="change_password">Change password</string>
    <string name="wrong_password">Old password is wrong</string>
    <string name="phone_format_error">Phone must be +380XXXXXXXXX</string>
    <string name="name_error">Name shouldn\'t containt numbers or special characters</string>
    <string name="user_data_updated">User data updated</string>
    <string name="user_data_added">User data added</string>
    <string name="personal_info">Personal information</string>
    <string name="complete_registration">Complete registration</string>
    <string name="user_added">User data added, please complete registration</string>
    <string name="login">Login</string>
    <string name="change_user">Change user</string>


    <array name="Ukraine">
        <item>Kyiv</item>
        <item>Kharkiv</item>
        <item>Dnipro</item>
        <item>Lviv</item>
    </array>
    <array name="Poland">
        <item>Warsaw</item>
        <item>Krakow</item>
        <item>Lodz</item>
        <item>Poznan</item>
    </array>
    <array name="Germany">
        <item>Berlin</item>
        <item>Munich</item>
        <item>Cologne</item>
        <item>Hamburg</item>
    </array>
</resources>
