<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNameLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="bottom"
        android:hint="@string/name_hint"
        android:textColorHint="@color/blueRosemary"
        app:hintTextAppearance="@style/BlueTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputbox_border"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingLeft="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastNameLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="bottom"
        android:hint="@string/last_name_hint"
        android:textColorHint="@color/blueRosemary"
        app:hintTextAppearance="@style/BlueTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLastName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputbox_border"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingLeft="7dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="bottom"
        android:hint="@string/phone_hint"
        android:textColorHint="@color/blueRosemary"
        app:hintTextAppearance="@style/BlueTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLastNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputbox_border"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingLeft="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/confirm_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPhoneLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>