<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/news_logo" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/app_name"
        android:textColor="@color/blueRosemary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLoginLayout"
        app:layout_constraintEnd_toEndOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="@+id/imageLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inputGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="bottom"
        android:hint="@string/login_hint"
        android:textColorHint="@color/blueRosemary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/BlueTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputGuideLine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox_border"
            android:fontFamily="@font/roboto_condensed_regular"

            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:gravity="bottom"
        android:hint="@string/pass_hint"
        android:textColorHint="@color/blueRosemary"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/BlueTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLoginLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox_border"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="Button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassLayout" />

    <TextView
        android:id="@+id/notRegisteredYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/not_registered_yet"
        android:textColor="@color/blueRosemary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/logButton"
        app:layout_constraintTop_toBottomOf="@+id/logButton" />
</androidx.constraintlayout.widget.ConstraintLayout>